--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41"
+    "postcss": "^8.4.41",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "scripts": {
     "build:css": "npx tailwindcss -i ./static/styles/input.css -o ./static/styles/main.css --minify",
